@@ -339,6 +339,24 @@ attempts to maximize the visual distance between colours.}{}
  ASCII format is more likely to be portable among different machine
  architectures.}{}
 
+\globalentry{Scalebar\_colour}{Colour}{CYAN}{
+The colour to use for the scalebar.
+}{}
+
+\globalentry{Scalebar\_enabled}{Boolean}{False}{
+If TRUE, scalebar display on the slice view is enabled.
+}{}
+
+\globalentry{Scalebar\_height}{Integer}{8}{
+Height of the scalebar in pixels.
+}{}
+
+\globalentry{Scalebar\_quadrant}{Integer}{1}{
+Set the quadrant of the scalebar, one of the following:
+1: upper right, 2: upper left, 3: lower left, 4: lower right
+}{}
+
+
 \globalentry{Secondary\_x\_brush\_radius}{Real}{3.0}{Defines the width
  of the secondary brush in world units.}{}
 
